--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.2",
     "apollo-link-http": "^1.5.17",
+    "apollo-upload-client": "^14.1.3",
     "date-fns": "^2.16.1",
     "graphql": "^15.5.0",
     "jwt-decode": "^3.1.2",
