--- a/server/.env.example
+++ b/server/.env.example
@@ -1,2 +1,5 @@
 MONGO_URI=mongodb+srv://db.mongodb.net/db
 SECRET_KEY=12345678910
+AWS_ACCESS_KEY_ID=12345678910
+AWS_SECRET_ACCESS_KEY=12345678910
+AWS_BUCKET=example_bucket
