--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "scripts": {
-    "start": "cd server/ && node index.js",
-    "heroku-postbuild": "cd client/ && npm install && run build"
+    "start": "cd server/ && npm install && node index.js",
+    "heroku-postbuild": "cd client/ && npm install && npm run build"
+  },
+  "engines": {
+    "node": "12.21.0"
   }
 }
