--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "scripts": {
     "frontend": "cd client && npm start",
     "api": "cd server && nodemon index.js",
-    "dev": "concurrently --kill-others-on-fail \"npm run api\" \"npm run frontend\"",
+    "dev": "cd server && nodemon index.js && cd ../client && npm start",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "engines": {
     "node": "12.21.0"
+  },
+  "dependencies": {
+    "concurrently": "^6.0.0"
   }
 }
