--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "scripts": {
-    "frontend": "cd client && npm start",
-    "api": "cd server && nodemon index.js",
-    "start": "cd server && nodemon index.js && cd ../client && npm start",
+    "client": "cd client && npm start",
+    "server": "cd server && npm start",
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "engines": {
