--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
     "client": "cd client && npm start",
-    "server": "cd server && node index.js",
+    "server": "cd server && npm i && node index.js",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "heroku-postbuild": "cd client && npm install && npm run build"
   },
