--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "client": "cd client && npm start",
-    "server": "cd server && node index.js",
+    "client": "cd client && npm i && npm start",
+    "server": "cd server && npm i && npm start",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "engines": {
